<resources>
    <string name="app_name">MobileGraphics_FinalProject</string>
    <string name="gasPurchased">Gas Purchased (L): </string>
    <string name="cost">Cost: </string>
    <string name="odometer">Odometer: </string>
    <string name="date">Date: </string>
    <string name="authorText">Author: </string>
    <string name="version">Version Number: </string>
    <string name="instructions">Instructions: </string>
    <string name="avgPriceMonth">Average Price Last Month: </string>
    <string name="avgLLastMonth">Litres Purchased Last Month: </string>
    <string name="avgLPerMonth">Litres Purchased Per Month</string>


    <!-- Start of Chris' strings -->
    <string name="nutrition_submit_button">Submit</string>
    <string name="nutrition_commit_changes_button">Commit changes</string>
    <string name="add_nutrition_item_hint">Food Item</string>
    <string name="add_nutrition_calories_hint">Calories</string>
    <string name="add_nutrition_fat_hint">Total Fat (g)</string>
    <string name="add_nutrition_carbs_hint">Carbohydrates (g)</string>
    <string name="edit_nutrition_blank_food_item_entry_warning">You cannot leave Food Item field empty.</string>
    <string name="nutrition_daily_calories_eaten">Total Daily Calories:</string>
    <string name="nutrition_daily_fat_eaten">Total Daily Fat:</string>
    <string name="nutrition_daily_carbs_eaten">Total Daily Carbohydrates:</string>
    <string name="nutrition_details_calories">Calories:</string>
    <string name="nutrition_details_fat">Total Fat:</string>
    <string name="nutrition_details_carbs">Total Carbohydrates:</string>
    <string name="nutrition_details_date">Added on:</string>
    <string name="nutrition_no_changes_toast">You have not changed any details, or have left the item field blank</string>
    <string name="nutrition_wish_to_delete">Are you sure you want to delete this entry?</string>
    <string name="nutrition_wish_to_delete_confirmation">Yes</string>
    <string name="nutrition_wish_to_delete_rejection">Cancel</string>
    <string name="nutrition_snackbar_add_entry">Nutrition entry added</string>
    <string name="nutrition_snackbar_delete_entry">Nutrition entry deleted</string>
    <string name="nutrition_snackbar_update_entry">Nutrition entry updated</string>
    <!-- End of Chris' strings -->

    <!-- Thermostat Strings -->
    <string name="thermostat_day_TV">Day of the Week: </string>
    <string name="thermostat_day_ET"> Monday</string>
    <string name="thermostat_hour_TV">Hour (24hr): </string>
    <string name="thermostat_temp_TV">Temperature: </string>
    <string name="degrees"> 21 </string>
    <string name="degreesC"> °C </string>
    <string name="hour_ET"> 12:00 </string>
    <string name="thermostat_Submit"> Submit </string>
    <string name="thermostat_update"> Update Existing Setting </string>
    <string name="thermostat_SubmitNew"> Submit as New Setting </string>
    <string name="thermostat_SubmitNotNew"> Update Existing </string>
    <string name="ThermostatAddEntryTitle"> Create New Thermostat Setting </string>
    <string name="thermostatTitleText"> Thermostat Settings </string>

    <string-array name="days_of_the_week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string name="btn_delete">delete</string>
    <string name="btn_add">add</string>
    <string name="btn_edit">edit</string>
    btn_delete
    <!-- End of Thermostat Strings -->

    <!-- Activity Strings -->
    <string name="activity_author">Author: Melissa Rajala</string>
    <string name="activity_version">Version: 1.0</string>
    <string name="activity_exit_help">Exited Help</string>
    <string name="activity_time">Duration: </string>
    <string name="activity_comment">Comments: </string>
    <string name="activity_submit">Submit Entry</string>


    <string-array name="activity_types">
        <item>Running</item>
        <item>Walking</item>
        <item>Biking</item>
        <item>Swimming</item>
        <item>Skating</item>
    </string-array>
    <!-- End of Activity Strings -->


    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
