<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorNutritionTrackerBackground"
    tools:context=".nutrition.NutritionFragment"
    android:id="@+id/add_nutrition_frame_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/add_nutrition_item_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_nutrition_item_hint"/>

        <EditText
            android:id="@+id/add_nutrition_calories_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/add_nutrition_calories_hint"/>

        <EditText
            android:id="@+id/add_nutrition_fat_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/add_nutrition_fat_hint"/>

        <EditText
            android:id="@+id/add_nutrition_carbs_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/add_nutrition_carbs_hint"/>

        <Button
            android:id="@+id/add_nutrition_entry_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nutrition_submit_button"/>

    </LinearLayout>
</FrameLayout>