<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/thermostatFrameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorThermostatBackground"
    android:orientation="horizontal">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/editLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/ThermostatAddEntryTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/ThermostatAddEntryTitle"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <GridLayout
            android:id="@+id/griddy"
            android:layout_width="384dp"
            android:layout_height="172dp"
            android:layout_marginTop="116dp"
            android:columnCount="2"
            android:rowCount="4"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="139dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/thermostat_day_TV" />

            <Spinner
                android:id="@+id/thermostatSpinner"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:entries="@array/days_of_the_week"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/thermostat_hour_TV"
                android:layout_width="139dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/thermostat_hour_TV" />

            <EditText
                android:id="@+id/thermostat_hour_ET"
                android:layout_width="141dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hour_ET"
                android:inputType="time"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/thermostat_temp_TV"
                android:layout_width="139dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/thermostat_temp_TV" />

            <EditText
                android:id="@+id/thermostat_temp_ET"
                android:layout_width="141dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="2"
                android:ems="10"
                android:hint="@string/degrees"
                android:inputType="numberDecimal|numberSigned"
                android:textAlignment="center"
                tools:layout_editor_absoluteX="246dp"
                tools:layout_editor_absoluteY="70dp" />

        </GridLayout>

        <Button
            android:id="@+id/submitBTN"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/btnBack"
            android:text="@string/thermostat_Submit"
            android:textColor="@color/colorPrimary"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/griddy" />

        <Button
            android:id="@+id/asNewBTN"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/btnBack"
            android:text="@string/thermostat_SubmitNew"
            android:textColor="@color/colorPrimary"
            android:visibility="invisible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/submitBTN" />

        <TextView
            android:id="@+id/degreesC"
            android:layout_width="102dp"
            android:layout_height="30dp"
            android:layout_marginBottom="56dp"
            android:text="@string/degreesC"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/griddy"
            app:layout_constraintRight_toRightOf="@id/griddy" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>