<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/addFrameLayout"
    android:orientation="horizontal"
    android:background="@color/colorAutomobileBackground">


    <LinearLayout
        android:id="@+id/editLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/gasAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/gasPurchased"/>

        <EditText
            android:id="@+id/cost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/cost"/>

        <EditText
            android:id="@+id/km"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/odometer"/>




        <Button

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/submitButton"
            android:text="SUBMIT"
            android:layout_alignParentBottom="true"
            />

    </LinearLayout>
</FrameLayout>
