<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorThermostatBackground"
    tools:context=".Thermostat">

    <ProgressBar
        android:id="@+id/thermostatProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:visibility="visible" />

    <ListView
        android:id="@+id/thermostat_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/thermostatProgressBar" />

    <LinearLayout
        android:id="@+id/activity_button_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        >

        <ImageButton
            android:contentDescription="@string/btn_add"
            android:id="@+id/activity_button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_add"
            android:layout_weight="1"/>

        <ImageButton
            android:contentDescription="@string/btn_delete"
            android:id="@+id/activity_button_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_delete"
            android:layout_weight="1"/>

        <ImageButton
            android:contentDescription="@string/btn_edit"
            android:id="@+id/activity_button_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_edit"
            android:layout_weight="1"/>

    </LinearLayout>

</RelativeLayout>